# vxengine

./: .gitignore  COPYRIGHT  README  setenv.sh
alg/flp/: CMakeLists.txt  Makefile  common.hxx  hw.hxx  hwfmac.hxx  hwfp.hxx  main.cxx
alg/relu/: .gitignore  CMakeLists.txt  Makefile  hwrelu.hxx  main.cxx  plot_relu.m
fpga/atlas-soc/scripts/: bridges.sh  fpga.sh
hw/apb/: Makefile
hw/apb/flists/: tb_apb_biu.lst
hw/apb/src/: apb_biu.v
hw/apb/tb/: tb_apb_biu.v
hw/apb_fmac/: Makefile
hw/apb_fmac/flists/: tb_apb_fmac.lst
hw/apb_fmac/src/: apb_fmac.v
hw/apb_fmac/tb/: tb_apb_fmac.v
hw/axi/: Makefile
hw/axi/flists/: tb_axi4_lite_biu.lst  tb_vxe_axi4mas_biu.lst  tb_vxe_axi4mas_biu_fifo.lst  tb_vxe_axi4slv_biu.lst
hw/axi/src/: axi4_lite_biu.v  vxe_axi4mas_biu.v  vxe_axi4slv_biu.v
hw/axi/tb/: tb_axi4_lite_biu.v  tb_vxe_axi4mas_biu.v  tb_vxe_axi4mas_biu_fifo.v  tb_vxe_axi4slv_biu.v
hw/fifo/: Makefile
hw/fifo/flists/: tb_vxe_fifo.lst  tb_vxe_fifo_2.lst
hw/fifo/src/: vxe_fifo.v  vxe_fifo_2.v
hw/fifo/tb/: tb_vxe_fifo.v  tb_vxe_fifo_2.v
hw/fifo2wxw/: Makefile
hw/fifo2wxw/flists/: tb_vxe_fifo2wxw.lst
hw/fifo2wxw/src/: vxe_fifo2wxw.v
hw/fifo2wxw/tb/: tb_vxe_fifo2wxw.v
hw/flp/: Makefile
hw/flp/flists/: tb_flp32_mac_5stg.lst  tb_flp_add_test.lst  tb_flp_align.lst  tb_flp_alignr.lst  tb_flp_iadd.lst  tb_flp_imult.lst  tb_flp_imult_stage.lst  tb_flp_mac_test.lst  tb_flp_mul_test.lst  tb_flp_norm.lst  tb_flp_pack.lst  tb_flp_round.lst  tb_flp_shifts.lst  tb_flp_unpack.lst
hw/flp/src/: flp32_mac_5stg.v  flp_add_test.v  flp_align.v  flp_alignr.v  flp_iadd.v  flp_imult.v  flp_imult_stage.v  flp_mac_test.v  flp_mul_test.v  flp_norm.v  flp_pack.v  flp_round.v  flp_shlpad.v  flp_shrjam.v  flp_unpack.v
hw/flp/tb/: tb_flp32_mac_5stg.v  tb_flp_add_test.v  tb_flp_align.v  tb_flp_alignr.v  tb_flp_iadd.v  tb_flp_imult.v  tb_flp_imult_stage.v  tb_flp_mac_test.v  tb_flp_mul_test.v  tb_flp_norm.v  tb_flp_pack.v  tb_flp_round.v  tb_flp_shifts.v  tb_flp_unpack.v
hw/flp/vl/: Makefile
hw/flp/vl/flists/: vl_flp32_mac_5stg.lst  vl_flp_add_test.lst  vl_flp_mac_test.lst  vl_flp_mul_test.lst
hw/flp/vl/include/: vl_common.hxx
hw/flp/vl/tb/: vl_flp32_mac_5stg.cxx  vl_flp32_mac_5stg.v  vl_flp_add_test.cxx  vl_flp_add_test.v  vl_flp_mac_test.cxx  vl_flp_mac_test.v  vl_flp_mul_test.cxx  vl_flp_mul_test.v
hw/pipe/: Makefile
hw/pipe/flists/: tb_vxe_pipe.lst  tb_vxe_pipe_2.lst
hw/pipe/src/: vxe_pipe.v  vxe_pipe_2.v
hw/pipe/tb/: tb_vxe_pipe.v  tb_vxe_pipe_2.v
hw/reg/: Makefile
hw/reg/flists/: tb_vxe_reg.lst  tb_vxe_reg_rst.lst
hw/reg/src/: vxe_reg.v  vxe_reg_rst.v
hw/reg/tb/: tb_vxe_reg.v  tb_vxe_reg_rst.v
hw/relu/: Makefile
hw/relu/flists/: tb_flp_relu.lst
hw/relu/src/: flp32_relu.v  flp_relu.v
hw/relu/tb/: tb_flp_relu.v
hw/relu/vl/: Makefile
hw/relu/vl/flists/: vl_flp_relu_test.lst
hw/relu/vl/tb/: vl_flp_relu_test.cxx  vl_flp_relu_test.v
hw/vxe/axi_switch/: Makefile
hw/vxe/axi_switch/flists/: tb_vxe_axi_switch.lst
hw/vxe/axi_switch/src/: vxe_axi_switch.v  vxe_axi_switch_ds.v  vxe_axi_switch_us.v
hw/vxe/axi_switch/tb/: tb_vxe_axi_switch.v
hw/vxe/ctrl_unit/: Makefile
hw/vxe/ctrl_unit/flists/: tb_vxe_ctrl_unit.lst  tb_vxe_cu_cmd_decoder.lst  tb_vxe_cu_dispatch_unit.lst  tb_vxe_cu_exec_unit.lst  tb_vxe_cu_fetch_unit.lst  tb_vxe_cu_intr_flt_unit.lst  tb_vxe_cu_vpu_fwd_unit.lst
hw/vxe/ctrl_unit/hex/: dispatchu_t1_cmd.hex  dispatchu_t2_cmd.hex  dispatchu_t2_rss.hex  dispatchu_t3_rss.hex  dispatchu_t4_cmd.hex  dispatchu_t4_rss.hex  dispatchu_t5_cmd.hex  dispatchu_t5_rss.hex  dispatchu_t6_cmd.hex  dispatchu_t6_rss.hex
hw/vxe/ctrl_unit/src/: vxe_ctrl_unit.v  vxe_cu_cmd_decoder.v  vxe_cu_dispatch_unit.v  vxe_cu_exec_unit.v  vxe_cu_fetch_unit.v  vxe_cu_intr_flt_unit.v  vxe_cu_vpu_fwd_unit.v
hw/vxe/ctrl_unit/tb/: tb_vxe_ctrl_unit.v  tb_vxe_cu_cmd_decoder.v  tb_vxe_cu_dispatch_unit.v  tb_vxe_cu_exec_unit.v  tb_vxe_cu_fetch_unit.v  tb_vxe_cu_intr_flt_unit.v  tb_vxe_cu_vpu_fwd_unit.v
hw/vxe/include/: vxe_client_params.vh  vxe_config.vh  vxe_ctrl_unit_cmds.vh  vxe_intr_params.vh  vxe_regio_params.vh  vxe_vpu_regidx_params.vh
hw/vxe/intr_unit/: Makefile
hw/vxe/mem_hub/: Makefile
hw/vxe/mem_hub/vl/: CMakeLists.txt  Makefile  run_fuzz.pl
hw/vxe/mem_hub/vl/hw/: vl_axi4_mem_hub.lst  vl_axi4_mem_hub.v
hw/vxe/mem_hub/vl/include/: axi4_2port_mem.hxx  axi4_internal.hxx  axi4_mem_port.hxx  stimulus.hxx  stimulus_common.hxx  stimulus_cu.hxx  stimulus_patgen.hxx  stimulus_test.hxx  stimulus_trace.hxx  stimulus_vpu.hxx  tb_top.hxx  trace.hxx
hw/vxe/mem_hub/vl/src/: main.cxx  stimulus_test.cxx  stimulus_trace.cxx
hw/vxe/regio/: Makefile
hw/vxe/top/: Makefile
hw/vxe/txn_codec/: Makefile
hw/vxe/txnid_codec/: Makefile
hw/vxe/vec_unit/: Makefile
slm/sc/: CMakeLists.txt  Makefile
slm/sc/include/: memory.hxx  memory_port.hxx  register_set.hxx  simple_cpu.hxx  simple_cpu_if.h  sys_top.hxx  tlm_payload.hxx  trace.hxx  util.hxx  vxe_common.hxx  vxe_ctrl_unit.hxx  vxe_fifo64x32.hxx  vxe_internal.hxx  vxe_master_port.hxx  vxe_mem_hub.hxx  vxe_pipe.hxx  vxe_port_util.hxx  vxe_slave_port.hxx  vxe_tlm_ext.hxx  vxe_top.hxx  vxe_vector_unit.hxx
slm/sc/src/: main.cxx  simple_cpu.cxx  tlm_payload.cxx
slm/sc/src/so/include/: simple_alloc.hxx  vec_util.hxx
slm/sc/src/so/mlp_test/: mlp_test.cxx
slm/sc/src/so/mlp_test/mnist_train/: CMakeLists.txt  Makefile  enn.c  enn.h  enn_train.c  enn_train.h  main.c  mnist.c  mnist.h  run.sh
slm/sc/src/so/mlp_test/mnist_train/mdl/: mlp_weights2.h  mnist_test_images.h  mnist_test_labels.h  mnist_train_images.h  mnist_train_labels.h  test_matches.h
slm/sc/src/so/mlp_test/mnist_train/mnist/: .gitignore  download.sh
slm/sc/src/so/relu_test/: relu_test.cxx
slm/sc/src/so/simple_test/: simple_test.cxx
slm/sc/src/so/unicast_test/: unicast_test.cxx
slm/sc/vl/: vl_flp32_mac_5stg.lst  vl_flp32_relu.lst
sw/apb_fmac_test/: Makefile  device.cxx  device.hxx  main.cxx
sw/util/: devmm.h  pgmap.h
sw/vxeasm/: .gitignore  Makefile  common.hxx  example.asm  vxe_instr.hxx  vxeasm.cxx  vxedisasm.cxx
(+107 files in other folders)
